# CotecchioPlayer

./: CMakeLists.txt  ERRORSLIST  main.cpp  settings.xml  variables.cpp  variables.hpp
common/logger/: list.txt  logger.cpp  logger.hpp
common/logger/utils/: logger_defines.cpp  logger_defines.hpp
game/stream/: Transcoder.cpp  Transcoder.hpp
lib/translator/: multi_language_library.cpp
math/: MathConsts.cpp  MathConsts.hpp  math_consts.cpp
math/matrix/: mat3.cpp  mat3.hpp  mat4.cpp  mat4.hpp
math/vector/: vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
network/: SocketConnection.cpp  SocketConnection.hpp  socketConnection.cpp  socketConnection.hpp  socket_connection.cpp
xml/: XmlHandler.cpp  XmlHandler.hpp  xmlHandler.cpp  xml_handler.cpp
